--- a/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
@@ -70,7 +70,7 @@
    Mobile phones
   ====================*/ 
   @media only screen and (min-width: 310px) {
-    .header__block  {
+    .header  {
         height: 77px;
         background: #000000;
 
@@ -78,12 +78,12 @@
             display: none
         }
 
-        .logo {
+        &__logo {
             margin-top: 5px;
             margin-left: 10px;
         }
 
-        .menu  {
+        &__menu  {
             position: absolute;
             right: 8px;
             height: 73px;
@@ -91,7 +91,7 @@
         }
     }
 
-    .main__block  {
+    .cover  {
         height: 250px;
         background-image: url("../img/banner-mobile.png");
         background-size: 100%;
@@ -99,10 +99,10 @@
 
     }
 
-    .search__block{
+    .search  {
         margin-left: 10%;
 
-        h1  {
+        &__title  {
             font-size: 24px;
             line-height: normal;
             width: 80%;
@@ -110,7 +110,7 @@
             color: black;   
         }
 
-        .search  {
+        &__input  {
             background: #FFFFFF;
             border: 1px solid #8E8E8E;
             box-sizing: border-box;
@@ -124,7 +124,7 @@
 
         }
 
-        .image  {
+        &__image  {
             width: 23px;
             height: 23px;
             margin-left: -40px;
@@ -133,19 +133,19 @@
 
     }
 
-    
-    .agent__block  {
+    .agent-container  {
         width: 90%;
         margin-left: 6%;
 
-        .single__agent  {
+        &__agent-item  {
             margin-top: 10px;
 
-            .header__agent  {
+            &__header  {
                 display: flex;
                 justify-content: space-around;
                 border-bottom: 1px solid #D8D8D8;
-                h2  {
+
+                &__agent-name  {
                     margin-left: 2%;
                     font-size: 18px;
                     line-height: normal;
@@ -153,27 +153,29 @@
 
             }
 
-           .body__agent  {
+           &__body  {
                display: flex;
-
-            p  {
-                margin-left: 10%;
-                width: 80%;
-                height: 50%;
-
-                font-size: 12px;
-                line-height: normal;
-                text-align: justify;
-
-                color: #000000;
-
-            
+                &__agent-description  {
+                    margin-left: 10%;
+                    width: 80%;
+                    height: 50%;
+                    font-size: 12px;
+                    line-height: normal;
+                    text-align: justify;
+                    color: #000000;
+                }
             }
-        }
 
-            .footer__agent  {
+            &__footer  {
                 display:flex;
-                .btn  {
+
+                &__price-description  {
+                    font-size: 14px;
+                    line-height: normal;
+                    color: #000000;
+                }
+
+                &__btn-buy  {
                     margin-left: 5%;
                     background: #000000;
                     border-radius: 18px;
@@ -183,39 +185,33 @@
                     width: 156px;
                     height: 34px;
                 }
-        
-                h2  {
-                    font-size: 14px;
-                    line-height: normal;
-                    color: #000000;
-                }
 
             }
         }
     }
 
-  .footer__block  {
+  .footer  {
       width: 100%;
       height: 88px;
       top: 1054px;
       display: inline-block;
       background: #000000;
     
-      p  {
+      &__develop  {
           margin-left: 10px;
-        width: 184px;
-        height: 28px;        
-        font-size: 12px;
-        line-height: normal;
-        color: #FFFFFF;   
+          width: 184px;
+          height: 28px;        
+          font-size: 12px;
+          line-height: normal;
+          color: #FFFFFF;   
       }
 
-      h5  {
+      &__terms  {
           margin-left: 10px;
-        font-size: 12px;
-        line-height: normal;
-        text-decoration-line: underline;
-        color: #FFFFFF;
+          font-size: 12px;
+          line-height: normal;
+          text-decoration-line: underline;
+          color: #FFFFFF;
       }
   }
 }
@@ -226,37 +222,20 @@
    ====================*/
    @media only screen and (min-width : 768px) {
 
-    .header__block  {
-        
-    }
-
-    .main__block  {
+    .cover  {
         height: 304px;
         background-image: url("../img/banner.png");
         background-size: 100%;
         background-repeat: no-repeat;
     
-        h1  {
-            top: 100%;
-            position: sticky;
-            margin-top: 33%;
-            margin-left: 10%;
-            width: 50%;
-            font-family: Arial;
-            font-size: 150%;
-            line-height: normal;
-            
-            color: white;   
-        }
-    
     }
 
-    .search__block{
+    .search  {
         position: absolute;
         top: 210px;
         width: 700px;
 
-        h1  {
+        &__title  {
             font-size: 24px;
             line-height: normal;
             width: 35%;
@@ -265,17 +244,17 @@
 
     }
 
-    .agent__block  {
+    .agent-container  {
         display: grid;
         grid-template-columns: 1fr 1fr;
         margin-top: 1%;
 
-        .single__agent  {
+        &__agent-item {
             margin-right: 10%;
         }
     }
 
-  .footer__block  {
+  .footer  {
     margin-top: 10%;
     width: 100%;
     height: 88px;
@@ -285,7 +264,7 @@
     background: #000000;
     display: flex;
 
-      p  {
+    &__develop  {
         margin-left: 10%;
         margin-top: 5%;
         width: 50%;
@@ -298,7 +277,7 @@
 
       }
 
-      h5  {
+      &__terms  {
         margin-left: 10%;
         margin-top: 5%;
         font-family: Arial;
@@ -316,16 +295,16 @@
    ====================*/
    @media only screen and (min-width : 1224px) {
 
-    .main__block  {
+    .cover  {
         height: 536px;
     }
 
-    .search__block{
+    .search  {
         position: absolute;
         top: 302px;
         width: 574px;
 
-        h1  {
+        &__title  {
             font-size: 36px;
             line-height: normal;
             width: 108%;
@@ -334,14 +313,14 @@
 
     }
 
-    .agent__block  {
+    .agent-container  {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
         margin-top: 1%;
 
     }
 
-    .footer__block  {
+    .footer  {
         margin-top: 10%;
         width: 100%;
         height: 88px;
@@ -351,7 +330,7 @@
         background: #000000;
         display: flex;
     
-          p  {
+        &__develop  {
             margin-left: 5%;
             margin-top: 3%;
             width: 50%;
@@ -364,7 +343,7 @@
     
           }
     
-          h5  {
+          &__terms  {
             margin-left: 30%;
             margin-top: 3%;
             font-family: Arial;
