--- a/SCSS/Run Forest Run/app/scss/partials/_base.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_base.scss
@@ -7,7 +7,7 @@
 //
 
 // *
-// * Author:      kchaves@intelligentsense.com
+// * Author:      cviquez@intelligentsense.com
 // * Date:        28/10/2013
 // * Description: Base partial. Put here all the code that doesnt compile to css directly. (params, mixins, etc)
 // 
