--- a/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
+++ b/SCSS/Run Forest Run/app/scss/partials/_media-queries.scss
@@ -7,8 +7,8 @@
 //
 
 // *
-// * Author:      kchaves@intelligentsense.com
-// * Date:        28/10/2013
+// * Author:      cviquez@intelligentsense.com
+// * Date:        16/05/2019
 // * Description: Media queries partial. Add here all the media queries
 //                
 // 
