--- a/SCSS/Run Forest Run/app/css/style.css
+++ b/SCSS/Run Forest Run/app/css/style.css
@@ -503,18 +503,46 @@ body {
  Desktop
  ====================*/
 @media only screen and (min-width: 1224px) {
-  /* line 298, ../scss/partials/_media-queries.scss */
+  /* line 299, ../scss/partials/_media-queries.scss */
+  .header__nav {
+    width: 400px;
+  }
+  /* line 301, ../scss/partials/_media-queries.scss */
+  .header__nav__items {
+    display: flex;
+  }
+  /* line 303, ../scss/partials/_media-queries.scss */
+  .header__nav__items li {
+    margin-right: 5%;
+    display: block;
+  }
+  /* line 306, ../scss/partials/_media-queries.scss */
+  .header__nav__items li a {
+    width: 100%;
+    display: inline;
+  }
+  /* line 315, ../scss/partials/_media-queries.scss */
+  .header__logo {
+    margin-top: 5px;
+    margin-left: 10px;
+  }
+  /* line 320, ../scss/partials/_media-queries.scss */
+  .header__menu {
+    display: none;
+  }
+
+  /* line 326, ../scss/partials/_media-queries.scss */
   .cover {
     height: 536px;
   }
 
-  /* line 302, ../scss/partials/_media-queries.scss */
+  /* line 330, ../scss/partials/_media-queries.scss */
   .search {
     position: absolute;
     top: 302px;
     width: 574px;
   }
-  /* line 307, ../scss/partials/_media-queries.scss */
+  /* line 335, ../scss/partials/_media-queries.scss */
   .search__title {
     font-size: 36px;
     line-height: normal;
@@ -522,14 +550,14 @@ body {
     color: white;
   }
 
-  /* line 316, ../scss/partials/_media-queries.scss */
+  /* line 344, ../scss/partials/_media-queries.scss */
   .agent-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-top: 1%;
   }
 
-  /* line 323, ../scss/partials/_media-queries.scss */
+  /* line 351, ../scss/partials/_media-queries.scss */
   .footer {
     margin-top: 10%;
     width: 100%;
@@ -539,7 +567,7 @@ body {
     background: #000000;
     display: flex;
   }
-  /* line 333, ../scss/partials/_media-queries.scss */
+  /* line 361, ../scss/partials/_media-queries.scss */
   .footer__develop {
     margin-left: 5%;
     margin-top: 3%;
@@ -550,7 +578,7 @@ body {
     line-height: normal;
     color: #FFFFFF;
   }
-  /* line 346, ../scss/partials/_media-queries.scss */
+  /* line 374, ../scss/partials/_media-queries.scss */
   .footer__terms {
     margin-left: 30%;
     margin-top: 3%;
@@ -564,7 +592,7 @@ body {
 /* ====================
     INTERMEDIATE: Menu
    ==================== */
-/* line 369, ../scss/partials/_media-queries.scss */
+/* line 397, ../scss/partials/_media-queries.scss */
 nav a {
   float: left;
   width: 27%;
@@ -572,11 +600,11 @@ nav a {
   padding: 25px 2%;
   margin-bottom: 0;
 }
-/* line 377, ../scss/partials/_media-queries.scss */
+/* line 405, ../scss/partials/_media-queries.scss */
 nav li:first-child a {
   margin-left: 0;
 }
-/* line 381, ../scss/partials/_media-queries.scss */
+/* line 409, ../scss/partials/_media-queries.scss */
 nav li:last-child a {
   margin-right: 0;
 }
@@ -584,12 +612,12 @@ nav li:last-child a {
 /* ========================
     INTERMEDIATE: IE Fixes
    ======================== */
-/* line 390, ../scss/partials/_media-queries.scss */
+/* line 418, ../scss/partials/_media-queries.scss */
 nav ul li {
   display: inline;
 }
 
-/* line 394, ../scss/partials/_media-queries.scss */
+/* line 422, ../scss/partials/_media-queries.scss */
 .oldie nav a {
   margin: 0 0.7%;
 }
@@ -598,7 +626,7 @@ nav ul li {
   /* ====================
       WIDE: CSS3 Effects
      ==================== */
-  /* line 405, ../scss/partials/_media-queries.scss */
+  /* line 433, ../scss/partials/_media-queries.scss */
   .header-container,
   .main aside {
     -webkit-box-shadow: 0 5px 10px #aaa;
@@ -609,12 +637,12 @@ nav ul li {
   /* ============
       WIDE: Menu
      ============ */
-  /* line 416, ../scss/partials/_media-queries.scss */
+  /* line 444, ../scss/partials/_media-queries.scss */
   .title {
     float: left;
   }
 
-  /* line 420, ../scss/partials/_media-queries.scss */
+  /* line 448, ../scss/partials/_media-queries.scss */
   nav {
     float: right;
     width: 38%;
@@ -623,12 +651,12 @@ nav ul li {
   /* ============
       WIDE: Main
      ============ */
-  /* line 430, ../scss/partials/_media-queries.scss */
+  /* line 458, ../scss/partials/_media-queries.scss */
   .main article {
     float: left;
     width: 57%;
   }
-  /* line 435, ../scss/partials/_media-queries.scss */
+  /* line 463, ../scss/partials/_media-queries.scss */
   .main aside {
     float: right;
     width: 28%;
@@ -638,7 +666,7 @@ nav ul li {
   /* ===============
       Maximal Width
      =============== */
-  /* line 448, ../scss/partials/_media-queries.scss */
+  /* line 476, ../scss/partials/_media-queries.scss */
   .wrapper {
     width: 1026px;
     /* 1140px - 10% for margins */
@@ -649,7 +677,7 @@ nav ul li {
    Print styles
    ========================================================================== */
 @media print {
-  /* line 459, ../scss/partials/_media-queries.scss */
+  /* line 487, ../scss/partials/_media-queries.scss */
   * {
     background: transparent !important;
     color: #000 !important;
@@ -658,18 +686,18 @@ nav ul li {
     text-shadow: none !important;
   }
 
-  /* line 466, ../scss/partials/_media-queries.scss */
+  /* line 494, ../scss/partials/_media-queries.scss */
   a,
   a:visited {
     text-decoration: underline;
   }
 
-  /* line 471, ../scss/partials/_media-queries.scss */
+  /* line 499, ../scss/partials/_media-queries.scss */
   a[href]:after {
     content: " (" attr(href) ")";
   }
 
-  /* line 475, ../scss/partials/_media-queries.scss */
+  /* line 503, ../scss/partials/_media-queries.scss */
   abbr[title]:after {
     content: " (" attr(title) ")";
   }
@@ -677,33 +705,33 @@ nav ul li {
   /*
    * Don't show links for images, or javascript/internal links
    */
-  /* line 483, ../scss/partials/_media-queries.scss */
+  /* line 511, ../scss/partials/_media-queries.scss */
   .ir a:after,
   a[href^="javascript:"]:after,
   a[href^="#"]:after {
     content: "";
   }
 
-  /* line 489, ../scss/partials/_media-queries.scss */
+  /* line 517, ../scss/partials/_media-queries.scss */
   pre,
   blockquote {
     border: 1px solid #999;
     page-break-inside: avoid;
   }
 
-  /* line 495, ../scss/partials/_media-queries.scss */
+  /* line 523, ../scss/partials/_media-queries.scss */
   thead {
     display: table-header-group;
     /* h5bp.com/t */
   }
 
-  /* line 499, ../scss/partials/_media-queries.scss */
+  /* line 527, ../scss/partials/_media-queries.scss */
   tr,
   img {
     page-break-inside: avoid;
   }
 
-  /* line 504, ../scss/partials/_media-queries.scss */
+  /* line 532, ../scss/partials/_media-queries.scss */
   img {
     max-width: 100% !important;
   }
@@ -711,7 +739,7 @@ nav ul li {
   @page {
     margin: 0.5cm;
   }
-  /* line 512, ../scss/partials/_media-queries.scss */
+  /* line 540, ../scss/partials/_media-queries.scss */
   p,
   h2,
   h3 {
@@ -719,7 +747,7 @@ nav ul li {
     widows: 3;
   }
 
-  /* line 519, ../scss/partials/_media-queries.scss */
+  /* line 547, ../scss/partials/_media-queries.scss */
   h2,
   h3 {
     page-break-after: avoid;
