--- a/Angular/AsignacionAngular/RunForestRun/src/app/main-content/main-content.component.scss
+++ b/Angular/AsignacionAngular/RunForestRun/src/app/main-content/main-content.component.scss
@@ -87,7 +87,7 @@
                 }
 
                 &__btn-buy  {
-                    margin-left: 5%;
+                    margin-left: 80px;
                     background: #000000;
                     border-radius: 18px;
                     font-size: 14px;
@@ -134,7 +134,7 @@
 
     .cover  {
         height: 304px;
-        background-image: url("../../assets/img/banner-mobile.png");
+        background-image: url("../../assets/img/banner.png");
         background-size: 100%;
         background-repeat: no-repeat;
     
@@ -169,6 +169,10 @@
    Desktop
    ====================*/
    @media only screen and (min-width : 1224px) {
+    .cover  {
+        height: 536px;
+    }
+    
     .search  {
         position: absolute;
         top: 302px;
