--- a/Angular/AsignacionAngular/RunForestRun/src/app/main-content/main-content.component.html
+++ b/Angular/AsignacionAngular/RunForestRun/src/app/main-content/main-content.component.html
@@ -2,11 +2,11 @@
   </div>
   <div class="search">
       <h1 class="search__title">Los Mejores agentes de seguridad</h1>
-      <input class="search__input" id="search_input" type="search" placeholder="Buscar por Ubicacion" onkeypress="return search_agent()">
+      <input class="search__input" id="search_input" type="search" placeholder="Buscar por Ubicacion" [(ngModel)]="agentFilter.name">
       <img class="search__image" src="../../assets/img/lupa.png" onclick="">
   </div>
 <div class="agent-container" id="agent-container" *ngIf="agents$" >
-    <div class="agent-container__agent-item"  *ngFor="let agent of agents$.companies">
+    <div class="agent-container__agent-item"  *ngFor="let agent of agents$.companies | filterBy: agentFilter">
         <div class="agent-container__agent-item__header">
             <h2 class="agent-container__agent-item__header__agent-name">{{agent.name}}</h2>
             <img src="../../assets/img/certified.png">
