--- a/Angular/AsignacionAngular/RunForestRun/src/app/main-content/main-content.component.html
+++ b/Angular/AsignacionAngular/RunForestRun/src/app/main-content/main-content.component.html
@@ -2,10 +2,10 @@
   </div>
   <div class="search">
       <h1 class="search__title">Los Mejores agentes de seguridad</h1>
-      <input class="search__input" id="search_input" type="search" placeholder="Buscar por Ubicacion" [(ngModel)]="agentFilter.name">
+      <input class="search__input" id="search_input" type="search" placeholder="Buscar por Ubicacion" [(ngModel)]="agentFilter.name" (ngModelChange)="modelChanged($event)">
       <img class="search__image" src="../../assets/img/lupa.png" onclick="">
   </div>
-<div class="agent-container" id="agent-container" *ngIf="agents$" >
+<div class="agent-container" id="agent-container" *ngIf="agents$" > 
     <div class="agent-container__agent-item"  *ngFor="let agent of agents$.companies | filterBy: agentFilter">
         <div class="agent-container__agent-item__header">
             <h2 class="agent-container__agent-item__header__agent-name">{{agent.name}}</h2>
